# IA_Taller

./: DaviData.csv  README.md  main.ipynb  proyectoFinal.ipynb  proyectoFinal_.ipynb  pyproject.toml
